# conjure

./: .gitignore  AddNet.ipynb  MLFS_Build_Your_StableDiffusion_in_a_Notebook.ipynb  README.md  WaveGenerator.ipynb  coarse-fitting.ipynb  conv_weights.ipynb  cube-fitting-outline.ipynb  cube-fitting.ipynb  edge_padding.ipynb  ellipsoid-fitting.ipynb  environment.yml  fill_cube_1.ipynb  fill_cylinder_final.ipynb  generator.ipynb  goals.txt  mesh_niceness_losses.ipynb  mesh_smoothen.ipynb  multispectral.ipynb  net-cube-fit-sample.ipynb  net-cube-fitting.ipynb  net-cube-pretraining.ipynb  onion.ipynb  pytorch-wavelets.ipynb  refinement.ipynb  simplify_mesh.ipynb  smoothing.ipynb  stretch_max.ipynb  test_octave.ipynb  test_tracer.ipynb  wavelet-fitting.ipynb
books/: 2D-Wavelet-Transform-Copy1.ipynb  2D-Wavelet-Transform.ipynb  cube-fitting-progressive.ipynb  geoid-fitting.ipynb  net-cube-pretraining.ipynb  progressive-cube-fitting.ipynb  simple-cube-fitting.ipynb  simplify_mesh-Copy1.ipynb  simplify_mesh.ipynb  supershape-fit-sample.ipynb  supershape-fitting-render.ipynb
raytracer/: CMakeLists.txt
raytracer/common/gdt/: CMakeLists.txt
raytracer/rayoptix/: CMakeLists.txt
raytracer/rayoptix/rayoptix/: LaunchParams.h  SampleRenderer.cpp  SampleRenderer.h  devicePrograms.cu  rayoptix.cpp  rayoptix.h
raytracer/tryoptix/: CMakeLists.txt
raytracer/tryoptix/tryoptix/: tryoptix.cpp
scripts/: constants.py  load_xml.py  main.py  render.py
src/loss/: angle_loss.py  distance_loss.py  edge_loss.py  laplacian_loss.py
src/mesh/: coarse.py  core.py  cube.py  ellipsoid.py  faces.py  geoid.py  octave.py  offset_normals.py  onion.py  supershape.py  wave_generator.py
src/render/: neighbor.py  tracer.py
src/shape/: core.py  layer.py  tree.py
src/shared/: blueprint.py  faces.py  gaussian.py  polar_traversal.py  sides.py  singan.py  util.py  vertex_normals.py  wavelet.py
